--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,6 @@ app.*.symbols
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 !/dev/ci/**/Gemfile.lock
+
+
+.fvm/flutter_sdk
